# simple_graph_database_stress_testing

./: .gitignore  pyproject.toml  readme.md  test_neo4j.ipynb
conf/: conf.yaml  faker.yaml
src/graph_database_stress_testing/dataset/: generate_dataset.py
src/graph_database_stress_testing/neo4j/: load.py  query.py
src/graph_database_stress_testing/utilities/: configuration.py  statistics.py
